--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -437,115 +437,179 @@ button { vertical-align: middle; text-align: center; color: white; background-co
 
 	
 
-<section id="products">
-    <h2>Product Modules</h2>
-
-    <div class="products">
-        <div class="product-card">
-            <h3>FusionShell Portal & Operational Tools</h3>
-            <p>Foundational tools designed to power large‑scale enterprise operations.</p>
-            <ul>
-                <li>Sales Operations</li>
-                <li>Product Development</li>
-                <li>Social Media Marketing</li>
-				<li>Ecommerce and Stripe Enabled Cart</li>
-				<li>Cross-Platform, Web, DesktopApps, and Mobile Tools</li>
-            </ul>
-        </div>
-
-        <div class="product-card">
-            <h3>Proximity Data & Analytics</h3>
-            <p>Advanced analytics products for data‑driven decision making.</p>
-            <ul>
-                <li>Enterprise reporting</li>
-                <li>Real‑time dashboards</li>
-                <li>Data governance tools</li>
-            </ul>
-        </div>
-
-        <div class="product-card">
-            <h3>Security & Compliance</h3>
-            <p>Protect critical systems and meet regulatory requirements.</p>
-            <ul>
-                <li>Threat detection</li>
-                <li>Compliance monitoring</li>
-                <li>Audit and logging</li>
-            </ul>
-        </div>
-
-        <div class="product-card">
-            <h3>Developer Enablement</h3>
-            <p>Tools that accelerate application development and integration.</p>
-            <ul>
-                <li>API management</li>
-                <li>DevOps automation</li>
-                <li>Integration services</li>
-            </ul>
-        </div>
-		<div class="product-card">
-            <h3>Enterprise BackOffice Tools</h3>
-            <p>Complex Infrastructure Tools</p>
-            <ul>
-                <li>Human Resources</li>
-                <li>Accounting Tools</li>
-                <li>Training Tools</li>
-				<li>Surveys and Electronic Fullfillment</li>
-				<li>Domain Controlled - Single Sign On</li>
-            </ul>
-        </div>
-		
+<!-- =============================== -->
+<!-- PRODUCT MODULES (GRID FORMAT)  -->
+<!-- =============================== -->
+<div class="griddata">
+    <div align="center">
+        <span><img src="./images/placeholder.png" width="150" height="150"></span>
+        <br><br>
+        <h4>Product Modules</h4>
     </div>
-</section>
+    <br>
 
-<section id="deployment">
-    <h2>Deployment </h2>
+    <div class="griddata-table">
 
-    <div class="products">
-        <div class="product-card">
-            <h3>Software On‑Premise</h3>
-            <p>Installed and operated within your own data centers for maximum control.</p>
-        </div>
-	<div class="product-card">
-            <h3>Software in ILEC PTT Colos</h3>
-            <p>Fully managed cloud‑based solutions at your primary partners location.</p>
+        <div class="grid-row">
+            <span>FusionShell Portal & Operational Tools</span>
+            <span>Category: Enterprise Operations</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Modules: Sales Ops, Product Dev, Social Media, Ecommerce, Cross‑Platform</span>
         </div>
 
-        <div class="product-card">
-            <h3>Software in Public Cloud</h3>
-            <p>Fully managed cloud‑based solutions with elastic scalability in the worlds largest public clouds.</p>
+        <div class="grid-row">
+            <span>Proximity Data & Analytics</span>
+            <span>Category: Analytics</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Modules: Reporting, Dashboards, Governance</span>
         </div>
 
-        <div class="product-card">
-            <h3>Hybrid Software</h3>
-            <p>Combine on‑premise infrastructure with cloud‑based services for flexible deployment.</p>
+        <div class="grid-row">
+            <span>Security & Compliance</span>
+            <span>Category: Security</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Modules: Threat Detection, Compliance, Audit Logging</span>
         </div>
-		 <div class="product-card">
-            <h3>Hybrid Grid Deployments(HA) </h3>
-            <p>Globally Distribute Your Data in HA Deployment bundles from our partner Capitol Technology Solutions.</p>
+
+        <div class="grid-row">
+            <span>Developer Enablement</span>
+            <span>Category: Development</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Modules: API Mgmt, DevOps, Integration</span>
         </div>
+
+        <div class="grid-row">
+            <span>Enterprise BackOffice Tools</span>
+            <span>Category: BackOffice</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Modules: HR, Accounting, Training, Surveys, SSO</span>
         </div>
-</section>
+
+    </div>
+    <br><br>
+</div>
 
 
-	  <section class="emphasis">
-  <div class="emphasis-inner">
-    <h3>Licensing Options</h3>
-    <p>Explore Fusion Licensening Options</p>
+<!-- =============================== -->
+<!-- DEPLOYMENT MODELS (GRID FORMAT) -->
+<!-- =============================== -->
+<div class="griddata">
+    <div align="center">
+        <span><img src="./images/placeholder.png" width="150" height="150"></span>
+        <br><br>
+        <h4>Deployment Models</h4>
+    </div>
+    <br>
 
-    <h3>Get Started & Pricing</h3>
-    <p>Get started immediately with instant license activation</p>
-	  
-	<h3>Secure & Compliant</h3>
-    <p>Enterprise‑grade security with SOC 2 Type II certification</p>
+    <div class="griddata-table">
 
-    <h3>Expert Support</h3>
-    <p>Dedicated support team available 24/7 for enterprise customers</p>
+        <div class="grid-row">
+            <span>Software On‑Premise</span>
+            <span>Category: Deployment</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Notes: Full control in your datacenter</span>
+        </div>
 
-    <h3>Instant Activation</h3>
-    <p>Get started immediately with instant license activation</p>
-	   
-  </div>
-</section>
+        <div class="grid-row">
+            <span>Software in ILEC PTT Colos</span>
+            <span>Category: Deployment</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Notes: Managed solutions at partner facilities</span>
+        </div>
+
+        <div class="grid-row">
+            <span>Software in Public Cloud</span>
+            <span>Category: Deployment</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Notes: Elastic scalability in major public clouds</span>
+        </div>
+
+        <div class="grid-row">
+            <span>Hybrid Software</span>
+            <span>Category: Deployment</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Notes: Mix of on‑prem and cloud</span>
+        </div>
+
+        <div class="grid-row">
+            <span>Hybrid Grid Deployments (HA)</span>
+            <span>Category: Deployment</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Notes: Global HA bundles via Capitol Tech Solutions</span>
+        </div>
+
+    </div>
+    <br><br>
+</div>
+
+
+<!-- =========================================== -->
+<!-- LICENSING & PLATFORM HIGHLIGHTS (GRID FORMAT) -->
+<!-- =========================================== -->
+<div class="griddata">
+    <div align="center">
+        <span><img src="./images/placeholder.png" width="150" height="150"></span>
+        <br><br>
+        <h4>Licensing & Platform Highlights</h4>
+    </div>
+    <br>
+
+    <div class="griddata-table">
+
+        <div class="grid-row">
+            <span>Licensing Options</span>
+            <span>Category: Licensing</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Notes: Explore Fusion Licensing Options</span>
+        </div>
+
+        <div class="grid-row">
+            <span>Get Started & Pricing</span>
+            <span>Category: Activation</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Notes: Instant activation available</span>
+        </div>
+
+        <div class="grid-row">
+            <span>Secure & Compliant</span>
+            <span>Category: Security</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Notes: SOC 2 Type II certified</span>
+        </div>
+
+        <div class="grid-row">
+            <span>Expert Support</span>
+            <span>Category: Support</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Notes: 24/7 enterprise support</span>
+        </div>
+
+        <div class="grid-row">
+            <span>Instant Activation</span>
+            <span>Category: Deployment</span>
+            <span>Updated: —</span>
+            <span>Version: —</span>
+            <span>Notes: Immediate license activation</span>
+        </div>
+
+    </div>
+    <br><br>
+</div>
+
 
 <section class="middle-columns" style="background-color: lightgrey;">
 
@@ -657,6 +721,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
