--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -511,41 +511,31 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         <div class="grid-row">
             <span>Software On‑Premise</span>
             <span>Category: Deployment</span>
-            <span>Updated: —</span>
-            <span>Version: —</span>
-            <span>Notes: Full control in your datacenter</span>
-        </div>
+            <span>@YourPlace</span>
+          </div>
 
         <div class="grid-row">
             <span>Software in ILEC PTT Colos</span>
             <span>Category: Deployment</span>
-            <span>Updated: —</span>
-            <span>Version: —</span>
-            <span>Notes: Managed solutions at partner facilities</span>
+            <span>@ILEC.Managed</span>
         </div>
 
         <div class="grid-row">
             <span>Software in Public Cloud</span>
             <span>Category: Deployment</span>
-            <span>Updated: —</span>
-            <span>Version: —</span>
-            <span>Notes: Elastic scalability in major public clouds</span>
+            <span>&CLOUD</span>
         </div>
 
         <div class="grid-row">
             <span>Hybrid Software</span>
             <span>Category: Deployment</span>
-            <span>Updated: —</span>
-            <span>Version: —</span>
-            <span>Notes: Mix of on‑prem and cloud</span>
+            <span>@GLI.Managed</span>
         </div>
 
         <div class="grid-row">
             <span>Hybrid Grid Deployments (HA)</span>
             <span>Category: Deployment</span>
-            <span>Updated: —</span>
-            <span>Version: —</span>
-            <span>Notes: Global HA bundles via Capitol Tech Solutions</span>
+            <span>@CTS.Managed</span>
         </div>
 
     </div>
@@ -560,7 +550,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
     <div align="center">
         <span><img src="./images/placeholder.png" width="150" height="150"></span>
         <br><br>
-        <h4>Licensing & Platform Highlights</h4>
+        <h4>Licensing, Pricing & TechSpecs</h4>
     </div>
     <br>
 
@@ -569,41 +559,31 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         <div class="grid-row">
             <span>Licensing Options</span>
             <span>Category: Licensing</span>
-            <span>Updated: —</span>
-            <span>Version: —</span>
-            <span>Notes: Explore Fusion Licensing Options</span>
+            <span><a href="#">Click Now!</a></span>
         </div>
 
         <div class="grid-row">
             <span>Get Started & Pricing</span>
             <span>Category: Activation</span>
-            <span>Updated: —</span>
-            <span>Version: —</span>
-            <span>Notes: Instant activation available</span>
+            <span><a href="#">Click Now!</a></span>
         </div>
 
         <div class="grid-row">
             <span>Secure & Compliant</span>
             <span>Category: Security</span>
-            <span>Updated: —</span>
-            <span>Version: —</span>
-            <span>Notes: SOC 2 Type II certified</span>
+            <span>Musts!</span>
         </div>
 
         <div class="grid-row">
             <span>Expert Support</span>
             <span>Category: Support</span>
-            <span>Updated: —</span>
-            <span>Version: —</span>
-            <span>Notes: 24/7 enterprise support</span>
+            <span>Always!</span>
         </div>
 
         <div class="grid-row">
             <span>Instant Activation</span>
             <span>Category: Deployment</span>
-            <span>Updated: —</span>
-            <span>Version: —</span>
-            <span>Notes: Immediate license activation</span>
+            <span>Now!</span>
         </div>
 
     </div>
@@ -721,6 +701,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
