--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -559,13 +559,13 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         <div class="grid-row">
             <span>Licensing Options</span>
             <span>Category: Licensing</span>
-            <span><a href="#">Click Now!</a></span>
+            <span><a href="#">Click Now For Licensing!</a></span>
         </div>
 
         <div class="grid-row">
             <span>Get Started & Pricing</span>
             <span>Category: Activation</span>
-            <span><a href="#">Click Now!</a></span>
+            <span><a href="#">Click Now For Pricing!</a></span>
         </div>
 
         <div class="grid-row">
@@ -701,6 +701,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
