--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -559,13 +559,13 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         <div class="grid-row">
             <span>Licensing Options</span>
             <span>Category: Licensing</span>
-            <span><a href="#">Click Now For Licensing!</a></span>
+            <span><a href="./licensing/licensing.html">Click Now For Licensing Options!</a></span>
         </div>
 
         <div class="grid-row">
             <span>Get Started & Pricing</span>
             <span>Category: Activation</span>
-            <span><a href="#">Click Now For Pricing!</a></span>
+            <span><a href="./pricing/pricing.html">Click Now For Pricing!</a></span>
         </div>
 
         <div class="grid-row">
@@ -577,13 +577,13 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         <div class="grid-row">
             <span>Expert Support</span>
             <span>Category: Support</span>
-            <span>Always!</span>
+            <span><a href="userhelp.html">Click Now For Support!</a></span>
         </div>
 
         <div class="grid-row">
             <span>Instant Activation</span>
             <span>Category: Deployment</span>
-            <span>Now!</span>
+            <<span><a href="licenses6.html">Click Here to BuyNow!</a></span>
         </div>
 
     </div>
@@ -701,6 +701,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
