--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -442,7 +442,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
 <!-- =============================== -->
 <div class="griddata">
     <div align="center">
-        <span><img src="./images/placeholder.png" width="150" height="150"></span>
+        <span><img src="./images/fusionpro25.png" width="150" height="150"></span>
         <br><br>
         <h4>Product Modules</h4>
     </div>
@@ -500,7 +500,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
 <!-- =============================== -->
 <div class="griddata">
     <div align="center">
-        <span><img src="./images/placeholder.png" width="150" height="150"></span>
+        <span><img src="./images/fusionpro25.png" width="150" height="150"></span>
         <br><br>
         <h4>Deployment Models</h4>
     </div>
@@ -701,6 +701,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
