--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -523,7 +523,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         <div class="grid-row">
             <span>Software in Public Cloud</span>
             <span>Category: Deployment</span>
-            <span>&CLOUD</span>
+            <span>@Public.Cloud</span>
         </div>
 
         <div class="grid-row">
@@ -701,6 +701,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
