--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -245,8 +245,64 @@ button { vertical-align: middle; text-align: center; color: white; background-co
 <!-- ========================= -->
 <section class="main-content">
 
-	<!-- FIRST FEATURES SECTION -->
-    <div id="features" class="features">
+<!-- FIRST FEATURES SECTION -->
+	<div id="features" class="features">
+	<HR>
+	<h4>Consider</h4><BR>
+	  <!-- Big display -->
+  <iframe id="centercourt" width="999" height="300" style="border:0;"></iframe>
+		<BR><BR>
+	<section class="sales-slider">
+  	<!-- Thumbnails -->
+      <div class="slider-window">
+      <div class="slides">
+
+        <div class="slide"
+             data-url="./images/slide1.png"
+             data-link="https://example.com/page1">
+          <img src="./images/slide1.png" alt="Slide 1">
+        </div>
+
+        <div class="slide"
+             data-url="./images/slide2.png"
+             data-link="https://example.com/page2">
+          <img src="./images/slide2.png" alt="Slide 2">
+        </div>
+
+        <div class="slide"
+             data-url="./images/slide3.png"
+             data-link="https://example.com/page3">
+          <img src="./images/slide3.png" alt="Slide 3">
+        </div>
+
+        <div class="slide"
+             data-url="./images/slide4.png"
+             data-link="https://example.com/page4">
+          <img src="./images/slide4.png" alt="Slide 4">
+        </div>
+
+        <div class="slide"
+             data-url="./images/slide5.png"
+             data-link="https://example.com/page5">
+          <img src="./images/slide5.png" alt="Slide 5">
+        </div>
+
+        <div class="slide"
+             data-url="./images/slide6.png"
+             data-link="https://example.com/page6">
+          <img src="./images/slide6.png" alt="Slide 6">
+        </div>
+
+      </div>
+    </div>
+
+    <button class="prev">❮</button>
+    <button class="next">❯</button>
+</section>
+	<HR>
+	</div>
+<!-- SECOND FEATURES SECTION -->
+	    <div id="features" class="features">
         <h4>Explore</h4><BR>
 
         <div class="feature-grid">
@@ -307,63 +363,8 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         </div>
     	</div>
 	<br><br>
-	<!-- THIRD FEATURES SECTION -->
-	<div id="features" class="features">
-	<HR>
-	<h4>Consider</h4><BR>
-	  <!-- Big display -->
-  <iframe id="centercourt" width="999" height="300" style="border:0;"></iframe>
-		<BR><BR>
-	<section class="sales-slider">
-  	<!-- Thumbnails -->
-      <div class="slider-window">
-      <div class="slides">
-
-        <div class="slide"
-             data-url="./images/slide1.png"
-             data-link="https://example.com/page1">
-          <img src="./images/slide1.png" alt="Slide 1">
-        </div>
-
-        <div class="slide"
-             data-url="./images/slide2.png"
-             data-link="https://example.com/page2">
-          <img src="./images/slide2.png" alt="Slide 2">
-        </div>
-
-        <div class="slide"
-             data-url="./images/slide3.png"
-             data-link="https://example.com/page3">
-          <img src="./images/slide3.png" alt="Slide 3">
-        </div>
-
-        <div class="slide"
-             data-url="./images/slide4.png"
-             data-link="https://example.com/page4">
-          <img src="./images/slide4.png" alt="Slide 4">
-        </div>
-
-        <div class="slide"
-             data-url="./images/slide5.png"
-             data-link="https://example.com/page5">
-          <img src="./images/slide5.png" alt="Slide 5">
-        </div>
-
-        <div class="slide"
-             data-url="./images/slide6.png"
-             data-link="https://example.com/page6">
-          <img src="./images/slide6.png" alt="Slide 6">
-        </div>
-
-      </div>
-    </div>
-
-    <button class="prev">❮</button>
-    <button class="next">❯</button>
-</section>
-	<HR>
-	</div>
 	
+	<!-- THIRD FEATURES SECTION -->
 	<!-- GRID DATA SECTION -->
     <div id="griddata" class="griddata">
         <div align="center"><span align="center"><img src="./images/fusionopen25.png" width="150px" height="150px"></span><BR>
@@ -436,7 +437,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
   <!-- Slider below -->
 
 	
-
+<!-- FOURTH FEATURES SECTION -->
 <!-- =============================== -->
 <!-- PRODUCT MODULES (GRID FORMAT)  -->
 <!-- =============================== -->
@@ -453,7 +454,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         <div class="grid-row">
             <span>FusionShell Portal & Operational Tools</span>
             <span>Category: Enterprise Operations</span>
-            <span>Updated: —</span>
+            <span>Updated: 12/2025—</span>
             <span>Version: —</span>
             <span>Modules: Sales Ops, Product Dev, Social Media, Ecommerce, Cross‑Platform</span>
         </div>
@@ -461,7 +462,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         <div class="grid-row">
             <span>Proximity Data & Analytics</span>
             <span>Category: Analytics</span>
-            <span>Updated: —</span>
+            <span>Updated: 12/2025—</span>
             <span>Version: —</span>
             <span>Modules: Reporting, Dashboards, Governance</span>
         </div>
@@ -469,7 +470,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         <div class="grid-row">
             <span>Security & Compliance</span>
             <span>Category: Security</span>
-            <span>Updated: —</span>
+            <span>Updated: 12/2025—</span>
             <span>Version: —</span>
             <span>Modules: Threat Detection, Compliance, Audit Logging</span>
         </div>
@@ -477,7 +478,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         <div class="grid-row">
             <span>Developer Enablement</span>
             <span>Category: Development</span>
-            <span>Updated: —</span>
+            <span>Updated: 12/2025—</span>
             <span>Version: —</span>
             <span>Modules: API Mgmt, DevOps, Integration</span>
         </div>
@@ -485,7 +486,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         <div class="grid-row">
             <span>Enterprise BackOffice Tools</span>
             <span>Category: BackOffice</span>
-            <span>Updated: —</span>
+            <span>Updated: 12/2025—</span>
             <span>Version: —</span>
             <span>Modules: HR, Accounting, Training, Surveys, SSO</span>
         </div>
@@ -701,6 +702,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
