--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -453,42 +453,32 @@ button { vertical-align: middle; text-align: center; color: white; background-co
 
         <div class="grid-row">
             <span>FusionShell Portal & Operational Tools</span>
-            <span>Category: Enterprise Operations</span>
-            <span>Updated: 12/2025—</span>
-            <span>Version: —</span>
             <span>Modules: Sales Ops, Product Dev, Social Media, Ecommerce, Cross‑Platform</span>
+            <span>Updated: 12/2025</span>
         </div>
 
         <div class="grid-row">
             <span>Proximity Data & Analytics</span>
-            <span>Category: Analytics</span>
-            <span>Updated: 12/2025—</span>
-            <span>Version: —</span>
             <span>Modules: Reporting, Dashboards, Governance</span>
+            <span>Updated: 12/2025</span>
         </div>
 
         <div class="grid-row">
             <span>Security & Compliance</span>
-            <span>Category: Security</span>
-            <span>Updated: 12/2025—</span>
-            <span>Version: —</span>
             <span>Modules: Threat Detection, Compliance, Audit Logging</span>
+            <span>Updated: 12/2025</span>
         </div>
 
         <div class="grid-row">
             <span>Developer Enablement</span>
-            <span>Category: Development</span>
-            <span>Updated: 12/2025—</span>
-            <span>Version: —</span>
             <span>Modules: API Mgmt, DevOps, Integration</span>
+            <span>Updated: 12/2025</span>
         </div>
 
         <div class="grid-row">
             <span>Enterprise BackOffice Tools</span>
-            <span>Category: BackOffice</span>
-            <span>Updated: 12/2025—</span>
-            <span>Version: —</span>
             <span>Modules: HR, Accounting, Training, Surveys, SSO</span>
+            <span>Updated: 12/2025</span>
         </div>
 
     </div>
@@ -702,6 +692,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
