--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -445,38 +445,38 @@ button { vertical-align: middle; text-align: center; color: white; background-co
     <div align="center">
         <span><img src="./images/fusionpro25.png" width="150" height="150"></span>
         <br><br>
-        <h4>Product Modules</h4>
+        <h4>Fusion Shell Professional Product Modules</h4>
     </div>
     <br>
 
     <div class="griddata-table">
 
         <div class="grid-row">
-            <span>FusionShell Portal & Operational Tools</span>
+            <span>FusionShell Professional Sales & Ops</span>
             <span>Modules: Sales Ops, Product Dev, Social Media, Ecommerce, Cross‑Platform</span>
             <span>Updated: 12/2025</span>
         </div>
 
         <div class="grid-row">
-            <span>Proximity Data & Analytics</span>
+            <span>FusionShell Proximity Data & Analytics</span>
             <span>Modules: Reporting, Dashboards, Governance</span>
             <span>Updated: 12/2025</span>
         </div>
 
         <div class="grid-row">
-            <span>Security & Compliance</span>
+            <span>FusionShell Greenville Enterprise Manager Security & Compliance</span>
             <span>Modules: Threat Detection, Compliance, Audit Logging</span>
             <span>Updated: 12/2025</span>
         </div>
 
         <div class="grid-row">
-            <span>Developer Enablement</span>
+            <span>FusionDeveloper Tools & Training</span>
             <span>Modules: API Mgmt, DevOps, Integration</span>
             <span>Updated: 12/2025</span>
         </div>
 
         <div class="grid-row">
-            <span>Enterprise BackOffice Tools</span>
+            <span>FusionBackOffice Tools</span>
             <span>Modules: HR, Accounting, Training, Surveys, SSO</span>
             <span>Updated: 12/2025</span>
         </div>
@@ -692,6 +692,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
