--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -333,7 +333,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
 		</div>
         </div>
 		<BR><BR>
-		
+	<HR>	
 		<!-- SECOND FEATURES SECTION -->
     	<div id="features" class="features">
         <h4>Manage</h4><BR>
@@ -362,6 +362,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
 			
         </div>
     	</div>
+	<HR>
 	<br><br>
 	
 	<!-- THIRD FEATURES SECTION -->
@@ -493,7 +494,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
     <div align="center">
         <span><img src="./images/fusionpro25.png" width="150" height="150"></span>
         <br><br>
-        <h4>Deployment Models</h4>
+        <h4>Fusion Deployment Models</h4>
     </div>
     <br>
 
@@ -692,6 +693,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
