--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -542,7 +542,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
     <div align="center">
         <span><img src="./images/fusionpro25.png" width="150" height="150"></span>
         <br><br>
-        <h4>Licensing, Pricing & TechSpecs</h4>
+        <h4>"Fusion" & "Strange" Services -> Licensing, and Professional Services Pricing & TechSpecs</h4>
     </div>
     <br>
 
@@ -693,6 +693,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
