--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -61,12 +61,7 @@
   outline: 2px solid #00e676;
 }
 
-
-
-
-
-
-
+H4{ color: darkgreen;}
 	
   .prev, .next {
     position: absolute;
@@ -693,6 +688,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
