--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -13,10 +13,7 @@
 <head>
     <meta charset="UTF-8">
     <title>USC242 HomePage</title>
-    <link rel="stylesheet" href="./css/site.css">
-    <link rel="stylesheet" href="./css/fishtank.css">
-	<link rel="stylesheet" href="./css/a9styles.css">
-	<link rel="stylesheet" href="./css/layout.css"> 
+	<link rel="stylesheet" href="./css/layout2.css"> 
     <script src="./js/fishtank.js"></script>
 <style>
    
