--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -14,6 +14,7 @@
     <meta charset="UTF-8">
     <title>USC242 HomePage</title>
 	<link rel="stylesheet" href="./css/layout2.css"> 
+	<link rel="stylesheet" href="./css/fishtank.css"> 
     <script src="./js/fishtank.js"></script>
 <style>
    
