--- a/assignments/9-loops/fishtank.html
+++ b/assignments/9-loops/fishtank.html
@@ -13,9 +13,11 @@
 <head>
     <meta charset="UTF-8">
     <title>USC242 HomePage</title>
-	<link rel="stylesheet" href="./css/layout2.css"> 
 	<link rel="stylesheet" href="./css/fishtank.css"> 
-    <script src="./js/fishtank.js"></script>
+	<link rel="stylesheet" href="./css/site.css"> 
+	<link rel="stylesheet" href="./css/layout.css"> 
+	<link rel="stylesheet" href="./css/layout2.css"> 
+	<script src="./js/fishtank.js"></script>
 <style>
    
   </style>
