--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -393,7 +393,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         </div><BR><BR>
 		<div id="griddata" class="griddata">
         <div align="center"><span align="center"><img src="./images/fusionpro25.png" width="150px" height="150px"></span><BR>
-			<BR><h4>FusionShell Open Current Releases</h4></div><BR>
+			<BR><h4>FusionShellPro V5.01 Current Releases</h4></div><BR>
 
         <div class="griddata-table">
             <!-- REST API results will be injected here -->
@@ -402,25 +402,25 @@ button { vertical-align: middle; text-align: center; color: white; background-co
                 <span>Variant: SalesOperations</span>
                 <span>Updated: 12/2021</span>
 				<span>Version: 5.01</span>
-				<span>Modules: Sales, Marketing, Shop, LunaAI, MobileWeb, Mobile</span>
+				<span>Modules: Sales, Marketing, Shop, LunaAI, MobileWeb, Mobile, GEM, FusionCommerce, Pro(9).Security(</span>
             </div>
 
             <div class="grid-row">
-                <span>FusionShell Open Backoffice</span>
+                <span>FusionShell Pro Backoffice</span>
                 <span>Variant: ERPCore on MSSQL Server</span>
 				<span>Updated: 12/2021</span>
 				<span>Version: V5.01</span>
                 <span>Modules: Microsoft Dynamics SL Extensions</span>
             </div>
 			<div class="grid-row">
-                <span>FusionShell Open Backoffice</span>
+                <span>FusionShell Pro Backoffice</span>
                 <span>Variant: ERPCore on MSSQL Server</span>
 				<span>Updated: 12/2021</span>
 				<span>Version: V5.01</span>
                 <span>Modules: NCR Backoffice for Aloha</span>
             </div>
 			<div class="grid-row">
-                <span>FusionShell Open Backoffice</span>
+                <span>FusionShell Pro Backoffice</span>
                 <span>Variant: ERPCore on Oracle Server</span>
 				<span>Updated: 12/2021</span>
 				<span>Version: V5.01</span>
@@ -688,6 +688,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
