--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -537,7 +537,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
     <div align="center">
         <span><img src="./images/fusionpro25.png" width="150" height="150"></span>
         <br><br>
-        <h4>"Fusion" & "Strange" Services -> Licensing, and Professional Services Pricing & TechSpecs</h4>
+        <h4>All Greenville Licensing, Professional & Technical Delivery Information</h4>
     </div>
     <br>
 
@@ -688,6 +688,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
