--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -558,7 +558,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         <div class="grid-row">
             <span>Secure & Compliant</span>
             <span>Category: Security</span>
-            <span>Musts!</span>
+            <span><a href="https://console.greenvilleassociates.com">Click Now For GEM Security(9)!</a></span>
         </div>
 
         <div class="grid-row">
@@ -570,7 +570,7 @@ button { vertical-align: middle; text-align: center; color: white; background-co
         <div class="grid-row">
             <span>Instant Activation</span>
             <span>Category: Deployment</span>
-            <<span><a href="licenses6.html">Click Here to BuyNow!</a></span>
+            <span><a href="licenses6.html">Click Here to BuyNow!</a></span>
         </div>
 
     </div>
@@ -688,6 +688,7 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
 </body>
 </html>
+
 
 
 
