--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -131,9 +131,8 @@
         </button>
     </div>
 <!-- ===================== LICENSE TABLE ===================== -->
-<section class="top-section">
-
-    <div class="card mb-10">
+<section class="top-section container-fluid">
+	<div class="card mb-10">
         <div class="card-header table-header-green">
             <span>All Licenses</span>
         </div>
