--- a/project/homepage/reviews.html
+++ b/project/homepage/reviews.html
@@ -123,7 +123,7 @@
     </div>
 
       <!-- FULL-WIDTH HEADER BAR -->
-    <div style="float: right; margin: 20px 120px;">
+    <div align="right" style="margin: 20px 120px;">
         <button class="btn btn-success custom-add-btn" data-bs-toggle="modal" data-bs-target="#addModal">
             Add Review
         </button>
