--- a/project/homepage/reviews.html
+++ b/project/homepage/reviews.html
@@ -124,14 +124,12 @@
 
       <!-- FULL-WIDTH HEADER BAR -->
     <div align="right" style="margin: 20px 120px;">
-        <button class="btn btn-success custom-add-btn" data-bs-toggle="modal" data-bs-target="#addModal">
+        <button class="btn btn-dark custom-add-btn" data-bs-toggle="modal" data-bs-target="#addModal">
             Add Review
         </button>
     </div>
     
 <section class="top-section">
-
-
     <!-- FULL-WIDTH TABLE -->
     <div class="table-responsive w-100">
         <table class="table table-hover review-table w-100" id="reviewTable">
