--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -131,13 +131,14 @@
         </button>
     </div>
 <!-- ===================== LICENSE TABLE ===================== -->
-<section class="top-section container-fluid">
-	<div class="card mb-10">
+<section class="top-section container-fluid p-0 m-0">
+    <div class="card mb-4 w-100" style="border-radius:0;">
+
         <div class="card-header table-header-green">
             <span>All Licenses</span>
         </div>
 
-        <div class="card-body">
+        <div class="card-body p-0">
             <table class="table table-bordered table-hover w-100" id="licenseTable">
                 <thead class="table-header-green">
                     <tr>
@@ -155,13 +156,13 @@
                 <tbody></tbody>
             </table>
 
-            <button class="btn btn-secondary custom-refresh-btn" onclick="loadLicenses()">
+            <button class="btn btn-secondary custom-refresh-btn m-3" onclick="loadLicenses()">
                 Refresh
             </button>
         </div>
     </div>
-
 </section>
+
 
 <!-- ========================================================= -->
 <!-- ===================== INSERT MODAL ======================= -->
