--- a/index.html
+++ b/index.html
@@ -231,11 +231,10 @@
             <h5>Build Sales Onesy Template</h5>
             <h6>Development Single Page Sales Delivery Vehicle</h6>
         </div>
-
 		
         <div class="project-item">
             <h4>Project Task10</h4>
-            <a href="https://jssg33.github.io/usc242/project/homepage/index.html"><img src="./images/homepage.png" alt="HTML Complete"></a>
+            <a href="https://jssg33.github.io/usc242/project/part5/index.html"><img src="./images/finalhomepage.png" alt="HTML Complete"></a>
             <h5>HTML Site Complate</h5>
             <h6>HTML Final Pages</h6>
         </div>
