--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 		
         <div class="project-item">
             <h4>Project Task10</h4>
-            <a href="https://jssg33.github.io/usc242/project/part5/index.html"><img src="./images/finalhomepage.png" alt="HTML Complete"></a>
+            <a href="https://jssg33.github.io/usc242/project/part5/index.html"><img src="./images/finalpages.png" alt="HTML Complete"></a>
             <h5>HTML Site Complate</h5>
             <h6>HTML Final Pages</h6>
         </div>
