--- a/assignments/9-loops/lab8v2.html
+++ b/assignments/9-loops/lab8v2.html
@@ -3,6 +3,20 @@
 <head>
   <title>Lab8</title>
   <style>
+
+    body
+    {
+	width: 100%;
+    }
+
+    .container
+    {
+    width: 510px;
+    margin: 0 auto;
+    position: relative;
+    height: 1000px;
+    }
+
     #one {
       position: absolute;
       border: 2px solid blue;
@@ -13,6 +27,20 @@
       margin-left: 30px;
       padding: 20px;
       animation-name: animationOne;
+      animation-duration: 4s;
+      animation-iteration-count: 5;
+    }
+
+    #onerev {
+      position: absolute;
+      border: 2px solid blue;
+      background-color: lightgrey;
+      top: 30px;
+      height: 100px;
+      width: 100px;
+      margin-left: 30px;
+      padding: 20px;
+      animation-name: animationOneReverse;
       animation-duration: 4s;
       animation-iteration-count: 5;
     }
@@ -48,69 +76,171 @@
       }
     }
 
-    @keyframes animationReverse {
-      0% {
-        background-color: green;
-        top: 30px;
-        margin-left: 330px;
-        height: 125px;
-        width: 125px;
-      }
-      25% {
-        background-color: orange;
-        top: 330px;
-        margin-left: 330px;
-        height: 150px;
-        width: 150px;
-      }
-      50% {
-        background-color: yellow;
-        top: 330px;
-        margin-left: 30px;
-        height: 125px;
-        width: 125px;
-      }
-      100% {
+    @keyframes animationOneReverse {
+     0% {
         background-color: lightgrey;
         top: 30px;
         margin-left: 30px;
         height: 100px;
         width: 100px;
       }
+      25% {
+        background-color: green;
+        top: 30px;
+        margin-left: 330px;
+        height: 125px;
+        width: 125px;
+      }
+      50% {
+        background-color: orange;
+        top: 330px;
+        margin-left: 330px;
+        height: 140px;
+        width: 140px;
+      }
+      100% {
+        background-color: yellow;
+        top: 330px;
+        margin-left: 30px;
+        height: 125px;
+        width: 125px;
+      }
     }
 
-    #one.reverse {
-      animation-name: animationReverse;
+    #onereverse {
+      animation-name: animationOneReverse;
       animation-duration: 4s;
-      animation-iteration-count: infinite;
+      animation-iteration-count: 5;
     }
 
     #two {
       position: absolute;
       font-size: 13pt;
       top: 600px;
-      height: 100px;
-      width: 100px;
+      height: 300px;
+      width: 100%;
       margin-left: 30px;
       text-align: center;
+      animation-name: animationTwo;
+      animation-duration: 4s;
+      animation-delay: 29s;
+      animation-iteration-count: infinite;
     }
+
+@keyframes animationTwo {
+     0% {
+        background-color: lightgrey;
+        top: 30px;
+	rotate: 90deg;
+        margin-left: 30px;
+        height: 200px;
+        width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+      }
+      25% {
+        background-color: green;
+        top: 530px;
+        rotate: 180deg;
+	margin-left: 230px;
+        height: 200px;
+        width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+      }
+      50% {
+        background-color: orange;
+        top: 550px;
+	rotate: 270deg;
+        margin-left: 260px;
+        height: 200px;
+        width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+      }
+      100% {
+        background-color: yellow;
+        top: 560px;
+	rotate: 360deg;
+        margin-left: 290px;
+        height: 200px;
+        width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+      }
+    }
+
+.buttonclass
+{
+width: 100%;
+}
+
+.animationOne {
+  animation-name: animationOne;
+  animation-duration: 4s;
+  animation-iteration-count: 5;
+}
+
+.animationOneReverse {
+  animation-name: animationOneReverse;
+  animation-duration: 4s;
+  animation-iteration-count: 5;
+}
+
   </style>
 </head>
 <body>
+<div class="container">
+<!--<div align="center" class="buttonclass">
+<button onclick="oneAnimation()">Start Animation One</button>
+<button onclick="oneAnimationReverse()">Start Animation One Reverse</button>
+</div><br>-->
+  <div id="one"></div> 
+  <div id="onerev"></div>
 
-  <div id="one"></div>
+
   <div id="two">John loves to play soccer</div>
-
+</div>
   <script>
-    const box = document.getElementById('one');
+    const box3 = document.getElementById('onerev');
     let count = 0;
 
     box.addEventListener('animationiteration', () => {
-      count++;
+      count = count + 1;
+      alert(count);
       if (count === 5) {
-        box.classList.add('reverse');
+        alert('changing box');
+	box3.classList.remove('onerev');
+        box3.classList.add('onereverse');
       }
     });
+
+
+function oneAnimation() {
+  alert("animationone");
+  const box1 = document.getElementById('one');
+  box1.classList.remove('animationOne');
+  void box.offsetWidth;
+  box.classList.add('animationOne');
+}
+
+function oneAnimationReverse() {
+  alert("animationonereverse");
+  const box2 = document.getElementById('onerev');
+  box2.classList.remove('animationOneReverse');
+  void box2.offsetWidth;
+  box2.classList.add('animationOneReverse');
+}
+
+
   </script>
 
 </body>
